--- a/PhotoScreensaverPlus/todo.txt
+++ b/PhotoScreensaverPlus/todo.txt
@@ -1,5 +1,4 @@
-﻿- Oprava Nullreference při spuštění náhledu v nastavování creensaveru
-- Klávesa O otevře Průzkumníka v adresáři aktuální fotky
+﻿- Klávesa O otevře Průzkumníka v adresáři aktuální fotky
 - Při pauze zobrazit symbol pauzy přes obrázek
 - Podívat se na tu dobu promítání, vypadá to, že při přepínání GTF se produlžuje
 - zobrazení pořadí fotky v adresáři i mimo GTF
